kubernetes/Tenark.AuthServer/base/tenark-authserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenark-authserver-service
spec:
  selector:
    app: tenark-authserver-service
  ports:
    - port: 8080
      targetPort: 8080
