kubernetes/Tenark.AuthServer/base/ternark-authserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenark-authserver-service
spec:
  selector:
    app: tenark-authserver-service
  ports:
    - port: 8081
      targetPort: 8081
